fix: background scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,3 @@ body {
   color: #dddddd;
   font-size: 1.8rem;
 }
-
-html {
-  /* background: linear-gradient(130deg, rgb(0, 59, 61), rgb(0, 0, 0)) no-repeat
-    center center fixed; */
-  background: url(assets/bg.jpg) no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-}
